# server-dashboard

./: .env  .gitignore  <  Cargo.toml  README.md  SampleScriptToQueryProxmox.py  export.psql  noteq.md  package-lock.json  package.json  requests.http  svelte.config.js
.sqlx/: query-870048caddae21eba30623900a436f69ea6cbf9b7f9d0c6e83b1e48a80a239ae.json  query-87da3b3ca69869e91023decac6d2985250b3b6b1eea3aea035684cb9e7bc4041.json
src/: file_handler.rs  login.rs  main.rs  proxmox.rs  storage.rs
src/lib/components/: Button.svelte  FileList.svelte  FilePopUp.svelte  Footer.svelte  FormPopUp.svelte  InformationOverlay.svelte  List.svelte  NavBar.svelte  PopUp.svelte  SeparationSecondary.svelte  Seperation.svelte
src/lib/data/: NavBar.ts  SampleServers.ts
src/lib/data/types/: files.ts  vms.ts
src/lib/functions/: formatTime.ts
src/lib/styles/: borderedList.css
src/proxmox/: proxmox_client.rs  proxmox_request.rs
src/routes/: +layout.svelte  +page.server.ts  +page.svelte
src/routes/account/: +page.server.ts  +page.svelte
src/routes/api/download/[filename]/: +server.ts
src/routes/cloud/: +page.server.ts  +page.svelte
src/routes/containers/: +page.svelte
src/routes/email/: +page.svelte
src/routes/login/: +page.server.ts  +page.svelte
src/routes/processes/: +page.svelte
src/routes/trading/: +page.svelte
src/storage/: file_client.rs  types.rs
