[package]
name = "server-dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
argon2 = "0.5.3"
base32 = "0.5.1"
dotenv = "0.15.0"
rand = "0.8.5"
serde = "1.0.217"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-rustls", "time"]}
time = { version = "0.3", features = ["serde"]}
